# auto-dns

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  NIX_DEVELOPMENT.md  README.md  build  build.sh  config.toml.example  docker-compose.yml  flake.nix  install.sh  setup.sh  shell.nix  test_config.toml
.devcontainer/: Dockerfile  devcontainer.json  initialize.sh
.github/workflows/: ci.yml
src/: config.rs  dns.rs  ip.rs  main.rs
tests/: integration_tests.rs
