[package]
name = "auto-dns"
version = "0.1.0"
edition = "2021"
authors = ["SomeEngineer42"]
description = "Automatic DNS updater for AWS Route53 using public IP detection"
license = "MIT"
repository = "https://github.com/SomeEngineer42/auto-dns"

[lints.rust]
warnings = "deny"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
aws-sdk-route53 = "1.28"
aws-config = "1.1"
aws-credential-types = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
